# ss

./: CMakeLists.txt  README.md  SimpleSettings.sln  SimpleSettings.vcxproj
include/ss/: error.h  file_storage.h  registry_storage.h  setting_storage.h  ts.h  util.h
src/: bulk_setting.cpp  configuration.cpp  enum.cpp  error.cpp
ss/: array.h  bulk_setting.h  configuration.h  const_.h  defaults_holder.cpp  defaults_holder.h  enum.h  error.cpp  file_storage.cpp  fwd.h  registry_storage.cpp  setting.h  template.h  util.cpp
